hphp/test/quick/hh_typehint3.php.expectf
HipHop Fatal error: Argument 1 passed to foo() must be of type ?xhp_url, array given in %s on line 7
